...
        android:id="@+id/bottom_nav_album"
        android:icon="@drawable/ic_album"
        android:title="Álbumes"
        android:contentDescription="Navegar a la sección de álbumes" />

    <item
        android:id="@+id/bottom_nav_artist"
        android:icon="@drawable/ic_artist"
        android:title="Artistas"
        android:contentDescription="Navegar a la sección de artistas" />

    <item
        android:id="@+id/bottom_nav_collector"
...
